两个数相连
两个数相连

--- a/926/Base.lproj/Main.storyboard
+++ b/926/Base.lproj/Main.storyboard
@@ -25,8 +25,22 @@
                                     <action selector="test:" destination="BYZ-38-t0r" eventType="touchUpInside" id="a5b-jq-jVA"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Th6-IP-fZL">
+                                <rect key="frame" x="89" y="272" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T6g-Oe-2Yp">
+                                <rect key="frame" x="89" y="318" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1dK-nf-uoA">
-                                <rect key="frame" x="126" y="231" width="97" height="30"/>
+                                <rect key="frame" x="89" y="223" width="97" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" notEnabled="YES"/>
@@ -44,11 +58,13 @@
                     </view>
                     <connections>
                         <outlet property="zyjX" destination="1dK-nf-uoA" id="GIK-Dz-Q9F"/>
+                        <outlet property="zyjY" destination="Th6-IP-fZL" id="mj0-Pt-4IU"/>
+                        <outlet property="zyjZ" destination="T6g-Oe-2Yp" id="wHE-pG-dal"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-266" y="134"/>
+            <point key="canvasLocation" x="65" y="173"/>
         </scene>
     </scenes>
 </document>
